# vxl_3

./: Cargo.toml  README.md  build.rs
res/shaders/default/: default.frag.glsl  default.vert.glsl
src/: main.rs  vxl_gl.rs
src/component/: camera.rs  material.rs  mesh.rs  mod.rs  player.rs  transform.rs
src/loader/: mod.rs
src/loader/shaders/: mod.rs  shader.rs  shader_program.rs
src/loader/textures/: mod.rs  texture.rs
src/render_functions/: mod.rs
src/resource/: input.rs  mod.rs  tasks.rs
src/system/: demo.rs  mod.rs  tasks.rs
src/utils/: key_codes.rs  mod.rs
