[package]
name = "vxl_3"
version = "0.1.0"
authors = ["Pavel Volkov <pvolkov@delimobil.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.17.0"
specs = "0.16.1"
glutin = "0.24"
rand = "0.7.3"
image = "0.23.9"

[build-dependencies]
gl_generator = "0.14"
walkdir = "2.3.1"